--- a/node-ui/src/routes/styles.scss
+++ b/node-ui/src/routes/styles.scss
@@ -1,19 +1,26 @@
+@use "./vars.scss" as *;
+
 @import '@fontsource/fira-mono';
+@import '@fontsource/fira-sans';
+
 
 :root {
-	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: 'Fira Mono', monospace;
+	--font-body: 'Fira Sans';
+	--font-mono: 'Fira Mono';
 	--color-bg-0: rgb(202, 216, 228);
 	--color-bg-1: hsl(209, 36%, 86%);
 	--color-bg-2: hsl(224, 44%, 95%);
 	--color-theme-1: #ff3e00;
 	--color-theme-2: #4075a6;
-	--color-text: rgba(0, 0, 0, 0.7);
+	--color-text: #333;
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
 	color: var(--color-text);
+}
+
+body, * {
+	font-family: $fontBody;
 }
 
 body {
@@ -104,4 +111,13 @@ button:focus:not(:focus-visible) {
 	position: absolute;
 	width: 1px;
 	white-space: nowrap;
+}
+
+
+.hidden {
+	display: none;
+}
+
+.mono-font {
+	font-family: var(--font-mono);
 }
