--- a/node-ui/src/routes/styles.scss
+++ b/node-ui/src/routes/styles.scss
@@ -5,18 +5,8 @@
 
 
 :root {
-	--font-body: 'Fira Sans';
-	--font-mono: 'Fira Mono';
-	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
-	--color-theme-1: #ff3e00;
-	--color-theme-2: #4075a6;
-	--color-text: #333;
-	--column-width: 42rem;
-	--column-margin-top: 4rem;
-	font-family: var(--font-body);
-	color: var(--color-text);
+	font-family: $fontBody;
+	color: $colorText;
 }
 
 body, * {
@@ -27,14 +17,7 @@ body {
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
-	background-color: var(--color-bg-1);
-	background-size: 100vw 100vh;
-	background-image: radial-gradient(
-			50% 50% at 50% 50%,
-			rgba(255, 255, 255, 0.75) 0%,
-			rgba(255, 255, 255, 0) 100%
-		),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+	background-color: #000;
 }
 
 h1,
@@ -48,7 +31,7 @@ p {
 }
 
 a {
-	color: var(--color-theme-1);
+	color: #61b8ff;
 	text-decoration: none;
 }
 
@@ -57,12 +40,12 @@ a:hover {
 }
 
 h1 {
-	font-size: 2rem;
+	font-size: 4rem;
 	text-align: center;
 }
 
 h2 {
-	font-size: 1rem;
+	font-size: 2rem;
 }
 
 pre {
@@ -73,7 +56,7 @@ pre {
 	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
 	padding: 0.5em;
 	overflow-x: auto;
-	color: var(--color-text);
+	color: $colorText;
 }
 
 .text-column {
@@ -119,5 +102,5 @@ button:focus:not(:focus-visible) {
 }
 
 .mono-font {
-	font-family: var(--font-mono);
+	font-family: $fontMono;
 }
